完善扫描ear包解析出DeployMetaData的处理逻辑，NodeType节点类型改为Capability的组合